# metap

./: .gitignore  README.md  another.py  mp_client.py  pyproject.toml  requirements.txt
examples/add_asserts/: mp_client.py  test_mp.py
examples/conditional_printing/: client.py  compile_and_run.sh  macro_defs.py  test_mp.py
examples/cvar/: mp_client.py  test_mp.py
examples/dyn_typecheck/: compile_and_run.sh  mp_client.py
examples/log_calls_start_end/: mp_client.py  test_mp.py
examples/log_func_defs/: mp_client.py  test.py  test_mp.py
examples/log_returns/: compile_and_run.sh  mp_client.py  src.py
examples/ret_ifnn/: compile_and_run.sh  mp_client.py  src.py
experimental_macros/: layer.py  macros.py  meta.py  parse.py  prog.py  test.py
metap/: __init__.py  metap.py
metap/macros/: default_defs.py  default_impl.py  gen_defaults.py
tests/: common.py  errors_warns.py  install.sh  run_tests.sh  test_states.py  tests.py
