[project]
name = "metap"
version = "0.0.5"
authors = [
  { name="Stefanos Baziotis", email="stefanos.baziotis@gmail.com" },
]
description = "A simple meta-programming layer for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"
]
keywords = ["meta-programming"]

[project.urls]
Homepage = "https://github.com/baziotis/metap"

[build-system]
requires = ["setuptools>=61.0", "astor>=0.8.1"]
build-backend = "setuptools.build_meta"